# fartts

./: .babelrc.js  .browserslist  .browserslistrc  .eslintignore  .eslintrc.json  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  fart.d.ts  jest.config.js  package.json  prettier.config.js  release.config.js  tsconfig.json  tslint.json
.github/: dependabot.yml
scripts/: screenshots.ts
src/app/: README.md  index.html  main.css  main.ts
src/app/experiments/00-test/: index.html
src/app/experiments/01-webgl/: main.css
src/app/experiments/02-resizing/: main.css  main.ts  shader.frag
src/app/experiments/test/: index.html  main.css  main.ts
src/app/experiments/webgl/: index.html  main.css  main.ts
src/app/lab/00-test/: index.html
src/app/lab/01-webgl/: index.html  main.ts
src/app/lab/02-resizing/: index.html  main.css  main.ts  shader.frag
src/app/lab/03-periodicity/: main.css  main.ts  program.ts  shader.ts
src/app/lab/03-waveforms/: index.html  main.ts  program.ts  shader.frag  shader.ts  shader.vert
src/app/lab/04-vectors/: index.html  main.ts  resize.ts
src/app/lab/05-tweens/: main.ts
src/cli/: cli.js  cli.test.js  index.js
src/cli/templates/: Cargo.toml.js  index.html.js
src/cli/templates/common/: index-html.js
src/cli/templates/src/: entry.ts.js  lib.rs.js  style.css.js  utils.rs.js
src/cli/templates/wasm/: Cargo.toml.js  index.html.js
src/cli/utils/: create-file.js  create-lab.js  index.js  update-cargo.js  update-index.js
src/lab/: README.md  index.html  main.ts
src/lab/00-test/: index.html  main.css
src/lab/00-test/src/: main.css
src/lab/01-webgl/: index.html  main.css  main.ts
src/lab/01-webgl/src/: main.css  main.ts
src/lab/02-resizing/: index.html  main.css  main.ts
src/lab/02-resizing/src/: main.css  main.ts  shader.vert
src/lab/03-periodicity/: index.html  main.ts
src/lab/03-periodicity/src/: main.ts
src/lab/04-vectors/: index.html  main.css  main.ts  resize.ts
src/lab/04-vectors/shaders/: frag.glsl
src/lab/04-vectors/src/: main.css  main.ts  resize.ts
src/lab/04-vectors/webgl/: shader.ts
src/lab/05-tweens/: entry.ts  index.html  main.css  main.ts  resize.ts
src/lab/05-tweens/shaders/: frag.glsl
src/lab/05-waves/: entry.ts  index.html
src/lab/05-waves/src/: entry.ts  style.css
src/lab/06-circles/: index.html  style.css
src/lab/06-circles/src/: entry.ts  resize.ts  style.css
src/lab/06-sprites/: entry.ts  resize.ts
src/lab/07-trees/: entry.ts  index.html  style.css
src/lab/07-trees/src/: entry.ts
src/lab/08-more-trees/: entry.ts  index.html
src/lab/08-more-trees/src/: entry.ts  resize.ts  style.css
src/lab/09-bezier/: entry.ts  index.html  resize.ts  style.css
src/lab/09-bezier/src/: entry.ts  resize.ts  style.css
src/lab/10-song-trees/: entry.ts  index.html  pointer.ts  song.ts  style.css  tree.ts
src/lab/11-rust-wasm/: Cargo.toml  entry.ts  index.html
src/lab/11-rust-wasm/crates/lab-11/: Cargo.toml
src/lab/11-rust-wasm/crates/pxs/: Cargo.toml
src/lab/11-rust-wasm/crates/pxs/src/: lib.rs
src/lab/11-rust-wasm/src/: entry.ts  lib.rs  style.css
src/lab/12-wasm-particles/: Cargo.toml  entry.ts  index.html  screen.ts  style.css
src/lab/12-wasm-particles/lab-12/: Cargo.toml
src/lab/12-wasm-particles/lab-12/src/: lib.rs  state.rs
src/lab/12-wasm-particles/src/: entry.ts  lib.rs  screen.ts  state.rs  style.css
src/lab/13-game-of-life/: Cargo.toml  index.html
src/lab/13-game-of-life/src/: dom.rs  entry.ts  lib.rs  life.rs  style.css  util.rs
src/lab/13-game-of-life/tests/: web.rs
src/lab/14-an-ecs/: index.html
src/lab/14-entity-component-system/: Cargo.toml  index.html
src/lab/15-plantlife/: index.html
src/lab/16-functional/: index.html
src/lab/17-gradient-texture/: index.html
src/lab/18-collisions/: index.html
src/lab/19-ponds/: index.html
src/lab/src/: main.css
src/lib/: dom.test.ts  dom.ts  math.test.ts  math.ts  step.test.ts  step.ts  util.ts  wave.test.ts  wave.ts
src/lib/core/: dom.test.ts  dom.ts  math.test.ts  math.ts  rand.test.ts  rand.ts  step.test.ts  step.ts  util.test.ts  util.ts  wave.ts
src/lib/game/: loop.test.ts  loop.ts
src/lib/util/: resize.test.ts  resize.ts
src/lib/vec/: 2.ts  3.ts  4.ts  factories.test.ts  factories.ts  index.d.ts  index.test.ts  index.ts  keys.test.ts  keys.ts  math.test.ts  math.ts  props.test.ts  props.ts  util.test.ts  util.ts
src/lib/vector/: factories.test.ts  factories.ts  index.test.ts  index.ts  math.test.ts  math.ts
(+114 files in other folders)
