[package]
name = "11-rust-wasm"
version = "0.1.0"
authors = ["Matt Hayes <matt@mysterycommand.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
cfg-if = "0.1.10"
console_error_panic_hook = { version = "0.1.6", optional = true }
wasm-bindgen = "0.2.59"
web-sys = { version = "0.3.36", features = [ "console", "CanvasRenderingContext2d" ] }
wee_alloc = { version = "0.4.5", optional = true }
