[package]
name = "12-wasm-particles"
version = "0.1.0"
authors = ["Matt Hayes <matt@mysterycommand.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
cfg-if = "0.1.10"
console_error_panic_hook = { version = "0.1.6", optional = true }
lazy_static = "1.4.0"
mut_static = "5.0.0"
rand = { version = "0.7.3", features = ['wasm-bindgen'] }
wasm-bindgen = "0.2.63"
web-sys = { version = "0.3.40", features = [ "console", "CanvasRenderingContext2d" ] }
wee_alloc = { version = "0.4.5", optional = true }
