[package]
name = "game-of-life"
version = "0.1.0"
authors = ["Matt Hayes <matt@mysterycommand.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = "0.3.20"
wasm-bindgen = "0.2.43"
wee_alloc = { version = "0.4.4", optional = true }

[dependencies.web-sys]
version = "0.3.20"
features = [
  "CanvasRenderingContext2d",
  "console",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.2.43"

[profile.release]
# optimize for size
# @see: https://doc.rust-lang.org/cargo/reference/manifest.html#the-profile-sections
opt-level = "s"
